upload some file

--- a/index.html
+++ b/index.html
@@ -1,21 +1,115 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
-  <body>
-  <center><h1>This is runing</h1></center>
-      
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My CV</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="container">
+        <!--Header part start-->
+        <header>
+            <img class="profile-image" src="pp.jpg">
+            <div class="header-bio">
+                <h1>Priyanka Rani Ghosh</h1>
+                <h3>Web Designer</h3>
+            </div>
+            <div class="header-contact">
+                <p><a href="mailto:Priyankapinkighosh@gmail.com" target="blank">Email : Priyankapinkighosh@gmail.com</a></p>
+                <p><a href="https://www.facebook.com/prenka.gosh" target="blank">Facebook : Priyanka Ghosh</a></p>
+                <p><a href="tel:01625466933" target="blank">Phone : 01625466933</a></p>
+            </div>
+        </header>
+        <!--Header part end-->
+        <!--Div clear-->
+        <div class="div-clear"></div>
+        <hr>
+        <!--Main part start-->
+        <main>
+            <!--Personal part start-->
+            <section id="personal-section">
+                <div class="content">
+                    <div class="left-div">
+                        <h1>Personal Information</h1>
+                    </div>
+                    <div class="right-div">
+                        <p>Address : House no : 42/5,Road : Dhalka Nagar Len, Post-Office : Gandaria-1204, Dhaka.</p>
+                        <p>Sex : Female</p>
+                        <p>Date of birth : 06 Jan 1999</p>
+                        <p>Blood Group : B+</p>
+                    </div>
+                </div>
+            </section>
+            <!--Div clear-->
+        <div class="div-clear"></div>
+            <!--Common horizontal rule-->
+            <hr class="common-hr">
+            <!--Skills part start-->
+            <section id="skill-section">
+                <div class="content">
+                    <div class="left-div">
+                        <h1>Skills</h1>
+                    </div>
+                    <div class="right-div">
+                        <h4>Android Development :</h4><br>
+                        <p> Java, Kotlin, Firebase Realtime Database, Firebase Authentication, Firebase Cloud Messaging, Firebase Push Notification, Google Maps API, FasterXML, SQLite, Dagger, Retrofit, Anko, Spring RestTemplate.</p><br>
+                        <h4> Web Scraping : </h4><br>
+                        <p>Python, JavaScript, C++, Scrapy, Beautiful Soup, jQuery, Bash, Selenium.<p><br>
+                        <h4>Web Development :</h4><br>
+                        <p>PHP, Laravel, Bootstrap, MySQL, Spring Boot, Thymeleaf, WebSocket, Ajax.</p><br>
+                        <h4>Desktop App Development :</h4><br> 
+                        <p>Node.js, Express.js, Electron.</p><br>
+                        <h4>Cloud Computing : </h4><br>
+                        <p>WS EC2, Google Compute Engine.</p><br>
+                    </div>
+                </div>
+            </section>
+            <!--Div clear-->
+        <div class="div-clear"></div>
+            <!--Common horizontal rule-->
+            <hr class="common-hr">
+            <!--Education part start-->
+            <section id="education-section">
+                <div class="content">
+                    <div class="left-div">
+                        <h1>Education</h1>
+                    </div>
+                    <div class="right-div">
+                        <div class="education-left">
+                            <h4>B.Sc In Computer Science & Engineering</h4>
+                            <h5>2017-2018</h5>
+                            <p>CGPA : 3.92</p>
+                            <p>Institute of Science and Technology (IST), Dhanmondi </p>
+                        </div>
+                        <div class="education-right">
+                            <h4>M.Sc in Cyber Security</h4>
+                            <h5>2017-2018</h5>
+                            <p>CGPA : 3.83</p>
+                            <p>Institute of Science and Technology (IST), Dhanmondi </p>
+                        </div>    
+                    </div>
+                </div>
+            </section>
+            <!--Div clear-->
+        <div class="div-clear"></div>
+            <!--Common horizontal rule-->
+            <hr class="common-hr">
+        </main>
+        <!--Main part end-->
+		<!--Div clear-->
+        <div class="div-clear"></div>
+        <!--Footer part start-->
+        <footer class="bottom-container">
+        	<a href="https://www.facebook.com/prenka.gosh" target="blank">Facebook</a>
+        	<a href="https://www.instagram.com/cuty_priya/" target="blank">Instagram</a>
+        	<a href="mailto:Priyankapinkighosh@gmail.com" target="blank">Email</a>
+        	<p>Copyright &copy; Priyanka Ghosh 2020</p>
+        </footer>
+        <!--Footer part end-->
+        <!--Div clear-->
+        <div class="div-clear"></div>
+    </div>
+</body>
 </html>
